--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: Tools For Humanity
 description: AI for All
+url: "https://toolsforhumanity.ai"
 baseurl: ""
-url: "https://www.toolsforhumanity.ai"
 
 # Build settings
 
